--- a/.github/workflows/containerbuildpush.yml
+++ b/.github/workflows/containerbuildpush.yml
@@ -35,6 +35,6 @@ jobs:
         platforms: linux/amd64
         push: true
         tags:  >
-          ghcr.io/${{ github.repository_owner }}/${{ env.IMAGENAME }}:${{ env.IMAGETAG }}, 
-          ghcr.io/${{ github.repository_owner }}/${{ env.IMAGENAME }}:latest
+          ghcr.io/${{ github.repository_owner.tolowercase }}/${{ env.IMAGENAME }}:${{ env.IMAGETAG }}, 
+          ghcr.io/${{ github.repository_owner.tolowercase }}/${{ env.IMAGENAME }}:latest
 
